# cos-insights-by-thoth

./: CMakeLists.txt  README.md
include/controllers/: base.h  user.h  user_controller.h
include/models/: user.h
include/repositories/: base.h  user.h  user_repository.h
include/services/: base.h  user.h  user_service.h
include/utils/: auth.h  database_connection.h  hash.h
src/: main.cpp
src/controllers/: user.cpp
src/models/: user.cpp
src/repositories/: base.cpp  user.cpp  user_repository.cpp
src/services/: user.cpp
src/utils/: auth.cpp  database_connection.cpp  hash.cpp
ui/thoth-insights/: README.md  package.json  pnpm-lock.yaml
ui/thoth-insights/src/: App.vue  i18n.ts  main.ts
ui/thoth-insights/src/assets/: main.css
ui/thoth-insights/src/router/: index.ts
ui/thoth-insights/src/stores/: index.ts
ui/thoth-insights/src/types/: base.d.ts  index.ts  photo.d.ts  project.d.ts  tab.d.ts  user.d.ts
ui/thoth-insights/src/views/: CoserView.vue  DashboardView.vue  LoginView.vue  PhotographerView.vue
